--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@babel/plugin-syntax-jsx": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "@rollup/plugin-commonjs": "^11.0.2",
+    "babel-eslint": "^10.1.0",
     "css-loader": "^4.3.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
