--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "web-vitals": "^2.1.2"
   },
   "scripts": {
-    "start":"react-scripts --expose-gc --max_old_space_size=12000 start",
+    "start": "react-scripts --expose-gc --max_old_space_size=12000 start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -62,6 +62,7 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "postcss-flexbugs-fixes": "^5.0.2",
-    "style-loader": "^1.3.0"
+    "style-loader": "^1.3.0",
+    "webpack-dev-middleware": "^5.3.0"
   }
 }
