--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "^5.0.1",
+    "react-test-renderer": "^17.0.1",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.1.1",
@@ -52,9 +53,8 @@
     "@babel/plugin-syntax-jsx": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "@rollup/plugin-commonjs": "^11.0.2",
-    "babel-eslint": "^10.1.0",
     "css-loader": "^4.3.0",
-    "eslint": "^7.32.0",
+    "eslint": "^7.11.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
