--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "find-your-house-app",
   "version": "0.1.0",
+  "lockfileVersion": 1,
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -62,6 +63,10 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "postcss-flexbugs-fixes": "^5.0.2",
+    "stylelint": "^13.3.3",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "^3.17.2",
     "style-loader": "^1.3.0",
     "webpack-dev-middleware": "^5.3.0"
   }
